Changes alignment of aboutme, fixed footer placement, etc.

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@
     left: 0%; 
     opacity: 0; 
     visibility: hidden; 
-    width: 0; 
+    width: 50px; 
     background-color: rgb(27, 27, 27); 
     z-index: 1010; 
     transition: all 0.3s; 
@@ -95,7 +95,7 @@
 }
 
 .footerLinks {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
@@ -103,6 +103,14 @@
     align-items: center;
     justify-content: space-between;
     background-color: #3A3335;
+}
+
+.footerLinks ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
 }
 
 .footerLinks ul li {
@@ -116,4 +124,19 @@
     text-decoration: none;
     color: #ECCE8E;
     text-transform: uppercase;
+}
+
+.about-me {
+    display: flex;
+    align-items: center;
+}
+
+.about-me img {
+    float: left;
+    margin-right: 20px;
+}
+
+.text-content {
+    flex: 1;
+    text-align: left;
 }
